<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mooo.ewolvy.chipmental.ui.EditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblLimiting"
        android:text="@string/label_limiting"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_limiting"
        android:transitionName="@string/transition_limiting"
        android:inputType="text"
        android:hint="@string/label_limiting"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblGrowing"
        android:text="@string/label_growing"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_growing"
        android:transitionName="@string/transition_growing"
        android:inputType="text"
        android:hint="@string/label_growing"/>
</LinearLayout>
